// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for registered roommate 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
    </div>
  </div>
  <div
    className="text-right"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#67C18B"
    >
      Completed
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;

exports[`matches snapshot for roommate in progress 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
    </div>
  </div>
  <div
    className="text-right"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#FAC700"
    >
      In Progress
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;

exports[`matches snapshot for unregistered roommate 1`] = `
<React.Fragment>
  <div
    className="css-14c5xr0"
  >
    <div>
      kreebs mcgreebs
      <br />
      <span
        className="css-1d2tdb8"
      >
        (383) 838-4849
      </span>
    </div>
    <React.Fragment>
      <br />
      <ForwardRef
        className="css-h8dj3w"
        to={
          Object {
            "pathname": "/application/1/resend-invite",
            "state": Object {
              "confirmationButtonText": "Back to Rental Profile",
              "initialValues": Object {
                "first_name": "kreebs",
                "id": 71,
                "is_registered": false,
                "last_milestone": null,
                "last_name": "mcgreebs",
                "phone_number": "(383) 838-4849",
              },
              "returnRoute": "/application/1/rental-profile/options#co_applicants",
            },
          }
        }
      >
        Edit/Resend
      </ForwardRef>
    </React.Fragment>
    <ForwardRef
      className="css-h8dj3w css-11kem00"
      to="/application/1/rental-profile/co_applicants/71/remove"
    >
      Remove
    </ForwardRef>
  </div>
  <div
    className="text-right"
  >
    <span
      className="css-1rn2trc"
    >
      Application Status:
    </span>
    <br />
    <ForwardRef(render)
      bold={true}
      color="#DB5963"
    >
      Not Started
    </ForwardRef(render)>
  </div>
</React.Fragment>
`;
